Fixed comment-input alignment

--- a/src/Components/comment/write-comment/write-comment.styles.scss
+++ b/src/Components/comment/write-comment/write-comment.styles.scss
@@ -13,7 +13,7 @@
     margin-left: 10px;
     background-color: $bg-primary-color;
     border-radius: 20px;
-    padding: 0 10px;
+    padding: 5px 10px;
     
 
     textarea {
